manifests/sec/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: network
    sectionName: https
  hostnames:
  - "keycloak.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: keycloak-keycloakx-http
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
